# techniques_de_test_2025_2026

./: .coverage  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
TP/: PLAN.md  RETEX.md
docs/triangulator/: algorithm.html  app.html  clients.html  exceptions.html  index.html  serialization.html
src/triangulator/: algorithm.py  app.py  clients.py  exceptions.py  serialization.py
tests/: conftest.py
tests/integration/: test_api.py  test_point_set_manager_client.py
tests/performance/: test_performance.py
tests/unit/: test_point_set_serialization.py  test_triangles_serialization.py  test_triangulation_algorithm.py
