[project]
name = "triangulator"
version = "0.1.0"

[build-system]
requires = ["setuptools", "wheel"]

[tool.ruff]
target-version = "py310"
line-length = 150
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "serialization: serialization tests",
    "algorithm: algorithm tests",
    "integration: integration tests",
    "performance: performance tests",
    "resilience: resilience tests",
]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]